# uiautomator2mcp

./: README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
src/uiautomator2_mcp/: __init__.py  __main__.py  adb_tools.py  device_manager.py  logcat.py  server.py
tests/: test_device_manager.py  test_screenshot_ui_tree.py  test_server_device_cache_and_shell.py  test_server_multi_device.py
