[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uiautomator2-mcp"
version = "0.1.0"
description = "MCP server for Android device automation via uiautomator2"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "uiautomator2", "android", "automation", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "mcp>=1.0.0",
    "uiautomator2>=3.0.0",
    "Pillow>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/stayer147/uiautomator2mcp"
Repository = "https://github.com/stayer147/uiautomator2mcp"
Issues = "https://github.com/stayer147/uiautomator2mcp/issues"

[project.scripts]
uiautomator2-mcp = "uiautomator2_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/uiautomator2_mcp"]
